<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchTheBreed"
    android:background="@drawable/border">


    <TextView
        android:id="@+id/textView_id_the_breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/search_the_breed"
        android:textColor="#DAD16543"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_dog"
        android:layout_width="328dp"
        android:layout_height="271dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/dog_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_id_the_breed"
        app:srcCompat="?android:attr/panelBackground"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText_breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_the_breed"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_dog" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="188dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:onClick="start"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_breed" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="188dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:onClick="stop"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_submit" />
</androidx.constraintlayout.widget.ConstraintLayout>