<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a1"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/button_id_the_breed"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif-medium"
        android:onClick="launchStart1"
        android:text="@string/identiy_the_breed"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_timer" />

    <Button
        android:id="@+id/button_id_the_dog"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif-medium"
        android:text="@string/identify_the_dog"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_id_the_breed"
        android:onClick="launchStart2" />

    <Button
        android:id="@+id/button_search_dog_breeds"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif-medium"
        android:text="@string/search_dog_breeds"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_id_the_dog"
        android:onClick="launchSearchBreed" />


    <Button
        android:id="@+id/button_exit"
        android:layout_width="199dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:onClick="ExitTheGame"
        android:text="@string/quit"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_search_dog_breeds" />

    <TextView
        android:id="@+id/main_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/dog_finder"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#DAD16543"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_timer"
        android:layout_width="112dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:text="@string/timer"
        android:textColor="#DAD16543"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>