<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyTheDog"
    android:background="@drawable/border">


    <TextView
        android:id="@+id/textView_guess_the_dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/guess_the_dog"
        android:textColor="#DAD16543"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_dogBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="#3366ff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_timer" />

    <TableLayout
        android:id="@+id/tableLayout_dogs"
        android:layout_width="398dp"
        android:layout_height="337dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_dogBreed">

        <TableRow
            android:layout_width="399dp"
            android:layout_height="144dp"
            android:layout_marginBottom="15dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/dog_image1"
                android:layout_width="180dp"
                android:layout_height="140dp"
                android:clickable="true"
                android:contentDescription="@string/breed1"
                android:focusable="true"
                android:onClick="clickableImage1"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_guess_the_dog"
                app:srcCompat="?android:attr/panelBackground"
                tools:ignore="MissingConstraints" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dog_image2"
                android:layout_width="180dp"
                android:layout_height="140dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/breed2"
                android:focusable="true"
                android:onClick="clickableImage2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_guess_the_dog"
                app:srcCompat="?android:attr/panelBackground"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/dog_image3"
                android:layout_width="180dp"
                android:layout_height="140dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/breed3"
                android:focusable="true"
                android:onClick="clickableImage3"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_guess_the_dog"
                app:srcCompat="?android:attr/panelBackground"
                tools:ignore="MissingConstraints" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:duplicateParentState="false"
        android:focusable="true"
        android:onClick="OnClick"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_correct_answer" />

    <TextView
        android:id="@+id/textView_correct_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout_dogs" />

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textColor="#FF0000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_guess_the_dog" />

</androidx.constraintlayout.widget.ConstraintLayout>